--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "kreait/firebase-php": "*",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-analytics": "^5.4",
         "stripe/stripe-php": "^16.1"
     },
     "require-dev": {
