Configuraciones para el servidor
Estoy agregando las configuraciones del Dockerfile, docker-compose.yml y nginx.conf para que al clonarlo funcione en el servidor.

Ademas agrego los backups y scripts para el nodo de replicacion.

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name shop.shine-go.tech www.shop.shine-go.tech;
+    server_name pagoes.line.pm www.pagoes.line.pm;
 
     # Redirigir todo el tráfico HTTP a HTTPS
     location / {
@@ -10,11 +10,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name shop.shine-go.tech www.shop.shine-go.tech;
+    server_name pagoes.line.pm www.pagoes.line.pm;
 
     # Configuración de SSL
-    ssl_certificate /etc/letsencrypt/live/shop.shine-go.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/shop.shine-go.tech/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/pagoes.line.pm/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/pagoes.line.pm/privkey.pem;
 
     # Configuración de Laravel
     root /var/www/html/public;
