--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,14 @@
-version: '3.8'
-
 services:
   # Servicio de la aplicación Laravel
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: shinego_app
+    container_name: pagomovil_es
     volumes:
       - .:/var/www/html:delegated
     networks:
-      - shinego_network
+      - pagomoviles_network
     depends_on:
       - db
     command: ["php-fpm", "-F"]
@@ -19,7 +17,7 @@ services:
   # Servicio de Nginx para servir la aplicación Laravel
   webserver:
     image: nginx:alpine
-    container_name: shinego_nginx
+    container_name: pagomoviles_nginx
     volumes:
       - .:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
@@ -29,23 +27,23 @@ services:
       - "8000:80"
       - "443:443"
     networks:
-      - shinego_network
+      - pagomoviles_network
     depends_on:
       - app
 
   # Servicio de MySQL
   db:
     image: mysql:8.0
-    container_name: shinygo_db
+    container_name: pagomoviles_db
     environment:
       MYSQL_ROOT_PASSWORD: admin123
-      MYSQL_DATABASE: ShinyGo
-      MYSQL_USER: shinygo_user
+      MYSQL_DATABASE: pagomovil_es
+      MYSQL_USER: pagomoviles_user
       MYSQL_PASSWORD: admin123
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - shinego_network
+      - pagomoviles_network
 
   # Servicio de Certbot para obtener certificados SSL
   certbot:
@@ -56,10 +54,10 @@ services:
       - .:/var/www/html
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     networks:
-      - shinego_network
+      - pagomoviles_network
 
 networks:
-  shinego_network:
+  pagomoviles_network:
     driver: bridge
 
 volumes:
