--- a/nginx-bot.conf
+++ b/nginx-bot.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name bot.shine-go.tech;
+    server_name bot.pagoes.line.pm;
 
     # Redirigir todo el tráfico HTTP a HTTPS
     location / {
@@ -10,11 +10,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name bot.shine-go.tech;
+    server_name bot.pagoes.line.pm;
 
     # Configuración SSL para HTTPS
-    ssl_certificate /etc/letsencrypt/live/bot.shine-go.tech/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bot.shine-go.tech/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/bot.pagoes.line.pm/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bot.pagoes.line.pm/privkey.pem;
 
     # Configuración para el archivo bot.php
     root /var/www/html/bot;  # Cambia este directorio si es necesario
